--- a/portal/chat.html
+++ b/portal/chat.html
@@ -63,7 +63,8 @@
     /* Ensure no body.app-bg-forest::before exists */
 
     .app {
-      min-height: 100vh; /* 브라우저 주소창/툴바 상태와 상관없이 항상 화면 높이 이상 유지 */
+      height: calc(var(--vh) * 100); /* 실제 뷰포트 높이에 맞춰 키보드 등장 시에도 자연스럽게 줄어들도록 */
+      min-height: 100vh;
       padding: 12px 12px calc(12px + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
@@ -866,6 +867,16 @@
     let isLoadingOlder = false;
     let currentBgObjectUrl = null;
     let isSending = false; // 엔터/버튼 중복 입력으로 인한 중복 전송 방지
+
+    // 뷰포트 높이 동기화: 키보드가 올라와도 .app 높이를 실제 화면에 맞게 조정
+    function updateViewportHeight() {
+      const vh = window.innerHeight * 0.01;
+      document.documentElement.style.setProperty("--vh", `${vh}px`);
+    }
+
+    updateViewportHeight();
+    window.addEventListener("resize", updateViewportHeight);
+    window.addEventListener("orientationchange", updateViewportHeight);
 
     // 업로드 프로필 초기화 (localStorage에서 불러오기)
     if (uploadProfileSelect) {
