--- a/portal/chat.html
+++ b/portal/chat.html
@@ -994,6 +994,14 @@
               : item.time !== undefined
               ? item.time
               : null;
+
+          // 서버에서 첨부 정보가 함께 올 경우 그대로 보존
+          const attachments = Array.isArray(item.attachments)
+            ? item.attachments
+            : Array.isArray(item.files)
+            ? item.files
+            : [];
+
           return {
             id:
               item.id ||
@@ -1001,6 +1009,7 @@
             role: item.role || "assistant",
             content: item.content || "",
             timestamp: ts,
+            attachments,
           };
         });
       } catch (e) {
