--- a/portal/chat.html
+++ b/portal/chat.html
@@ -1568,72 +1568,20 @@
     }
 
     async function renderHistory() {
-      // 1순위: 서버 공용 히스토리
+      // 서버 히스토리를 기준으로, 없을 때만 로컬 캐시 사용
       const serverMsgs = await fetchServerHistory(1000);
-      const localMsgs = loadHistory();
+      let base = [];
 
-      let merged = [];
-
-      if (serverMsgs.length || localMsgs.length) {
-        if (serverMsgs.length) {
-          // 서버/로컬 모두 있을 때는, 같은 (role + content + 시간) 키를 가진 메시지는
-          // "정보가 더 많은 쪽"을 우선 사용한다. (첨부 URL 등)
-          const keyOf = (m) => `${m.role}|${m.content}|${String(m.timestamp ?? "")}`;
-
-          const localByKey = new Map();
-          if (Array.isArray(localMsgs)) {
-            for (const m of localMsgs) {
-              const k = keyOf(m);
-              const existing = localByKey.get(k);
-              // 같은 키가 여러 개면, 첨부가 더 많은 쪽을 보존
-              if (!existing) {
-                localByKey.set(k, m);
-              } else {
-                const a1 = Array.isArray(existing.attachments)
-                  ? existing.attachments.length
-                  : 0;
-                const a2 = Array.isArray(m.attachments) ? m.attachments.length : 0;
-                if (a2 > a1) {
-                  localByKey.set(k, m);
-                }
-              }
-            }
-          }
-
-          const mergedBase = [];
-          const serverKeys = new Set();
-
-          for (const s of serverMsgs) {
-            const k = keyOf(s);
-            serverKeys.add(k);
-            const localCandidate = localByKey.get(k);
-            if (localCandidate) {
-              // 로컬 쪽이 첨부 URL 등을 더 많이 갖고 있으면 그쪽을 사용
-              const serverAttLen = Array.isArray(s.attachments) ? s.attachments.length : 0;
-              const localAttLen = Array.isArray(localCandidate.attachments)
-                ? localCandidate.attachments.length
-                : 0;
-              mergedBase.push(localAttLen >= serverAttLen ? localCandidate : s);
-            } else {
-              mergedBase.push(s);
-            }
-          }
-
-          // 서버에는 없고 로컬에만 남아 있는 추가 메시지들도 붙여준다.
-          const extrasLocal = Array.isArray(localMsgs)
-            ? localMsgs.filter((m) => !serverKeys.has(keyOf(m)))
-            : [];
-
-          merged = mergedBase.concat(extrasLocal);
-        } else {
-          // 서버가 비어 있으면 localStorage 백업만 사용
-          merged = Array.isArray(localMsgs) ? localMsgs : [];
-        }
+      if (Array.isArray(serverMsgs) && serverMsgs.length > 0) {
+        base = serverMsgs;
+      } else {
+        const localMsgs = loadHistory();
+        base = Array.isArray(localMsgs) ? localMsgs : [];
       }
 
       // 타임스탬프 기준으로 오래된 것 → 최신 순으로 정렬 (같은 시각이면 원래 순서 유지)
-      if (merged.length) {
-        const withOrder = merged.map((m, idx) => ({ ...m, _order: idx }));
+      if (base.length) {
+        const withOrder = base.map((m, idx) => ({ ...m, _order: idx }));
 
         withOrder.sort((a, b) => {
           const ta = a.timestamp ?? 0;
@@ -1647,10 +1595,10 @@
           return da - db;
         });
 
-        merged = withOrder.map(({ _order, ...rest }) => rest);
+        base = withOrder.map(({ _order, ...rest }) => rest);
       }
 
-      chatHistory = merged;
+      chatHistory = base;
       messagesInner.innerHTML = "";
 
       const total = chatHistory.length;
@@ -1660,7 +1608,7 @@
         appendMessageToDOM(chatHistory[i]);
       }
 
-      // 병합 결과를 localStorage에도 저장해서 백업처럼 사용
+      // 서버 기준 상태를 localStorage에도 백업처럼 저장
       saveHistory();
       scrollToBottom();
     }
