--- a/portal/chat.html
+++ b/portal/chat.html
@@ -323,6 +323,25 @@
     .pull-indicator.ready {
       color: #f7e3a2;
     }
+
+    .timeline-divider {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 10px 0;
+      font-size: 11px;
+      color: #e8e3db;
+      opacity: 0.8;
+    }
+
+    .timeline-divider::before,
+    .timeline-divider::after {
+      content: "";
+      flex: 1;
+      border-bottom: 2px dotted rgba(232, 227, 219, 0.9);
+      margin: 0 10px;
+    }
+
     .messages-inner {
       padding: 4px 4px 72px;
     }
@@ -1395,6 +1414,16 @@
     }
 
     function buildMessageRowElement(msg) {
+      // 시스템 역할 메시지는 타임라인 구분선으로 렌더링
+      if (msg.role === "system") {
+        const div = document.createElement("div");
+        div.className = "timeline-divider";
+        const span = document.createElement("span");
+        span.textContent = msg.content || "";
+        div.appendChild(span);
+        return div;
+      }
+
       const row = document.createElement("div");
       row.className = "msg-row " + (msg.role === "assistant" ? "other" : "me");
 
